# software-renderer-cpp

./: .clang-format  .editorconfig  .gitignore  AGENTS.md  CMakeLists.txt  README.md  build.sh  compile_and_run.sh  install_deps.sh
assets/cols/: cube.col  gba.col  quad.col
assets/materials/: gba.mtl  peaches_castle.mtl
docs/: 00-vision.md  01-architecture.md  02-roadmap.md  03-style.md  04-world-plan.md  05-animation.md  06-water-enhancements.md
include/app/: app_types.hpp  camera.hpp  cli.hpp  game.hpp  hud.hpp  input.hpp  present.hpp  render.hpp  settings.hpp  sim.hpp  util.hpp
include/sr/anim/: skinning.hpp
include/sr/assets/: animation.hpp  asset_store.hpp  fbx_skinned_model_loader.hpp  gltf_model_loader.hpp  material.hpp  mesh.hpp  model.hpp  mtl_loader.hpp  obj_loader.hpp  obj_model_loader.hpp  skeleton.hpp  skinned_model.hpp  texture_loader.hpp
include/sr/gfx/: depthbuffer.hpp  font5x7.hpp  framebuffer.hpp  texture.hpp
include/sr/math/: mat4.hpp  quat.hpp  transform.hpp  trs.hpp  vec2.hpp  vec3.hpp  vec4.hpp
include/sr/physics/: triangle_collider.hpp
include/sr/platform/: sdl.hpp
include/sr/render/: frustum.hpp  renderer.hpp
include/sr/scene/: fly_camera.hpp  player_controller.hpp  scene.hpp
legacy/pikuma/src/: assets.c  assets.h  color_picker.c  colors.c  colors.h  draw.c  draw.h  draw_lib.c  draw_lib.h  f_texture.c  f_texture.h  globals.h  input.c  input.h  light.c  light.h  main.c  mat4.c  mat4.h  material.c  mesh.c  (+42 more)
scripts/: fbx_to_glb.py  make_colors.py  start_colors.py
src/app/: camera.cpp  cli.cpp  game.cpp  hud.cpp  input.cpp  main.cpp  present.cpp  render.cpp  sim.cpp
(+16 files in other folders)
